<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="7"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@color/design_default_color_on_primary"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:text="@string/ac"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/c"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/percent"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/divide"
            android:textSize="35dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/seven"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/eight"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/nine"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/multiply"
            android:textSize="30dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/four"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/five"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/six"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/minus"
            android:textSize="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/one"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/two"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/three"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/plus"
            android:textSize="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/dZero"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/zero"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/btnDec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/dot"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            android:text="@string/equals"
            android:textSize="30dp"/>

    </LinearLayout>

</LinearLayout>
